src/metrics/snapshots/big_code_analysis__metrics__nom__tests__bash_multiple_functions_nom.snap
---
source: src/metrics/nom.rs
expression: metric.nom
---
{
  "functions": 2,
  "closures": 0,
  "functions_average": 0.6666666666666666,
  "closures_average": 0.0,
  "total": 2,
  "average": 0.6666666666666666,
  "functions_min": 0,
  "functions_max": 1,
  "closures_min": 0,
  "closures_max": 0
}
