src/metrics/snapshots/big_code_analysis__metrics__nom__tests__cpp_class_template_members.snap
---
source: src/metrics/nom.rs
expression: metric.nom
---
{
  "functions": 2.0,
  "closures": 0.0,
  "functions_average": 0.5,
  "closures_average": 0.0,
  "total": 2.0,
  "average": 0.5,
  "functions_min": 0.0,
  "functions_max": 1.0,
  "closures_min": 0.0,
  "closures_max": 0.0
}
