src/metrics/snapshots/big_code_analysis__metrics__nom__tests__cpp_constructor_and_destructor.snap
---
source: src/metrics/nom.rs
expression: metric.nom
---
{
  "functions": 3,
  "closures": 0,
  "functions_average": 0.6,
  "closures_average": 0.0,
  "total": 3,
  "average": 0.6,
  "functions_min": 0,
  "functions_max": 1,
  "closures_min": 0,
  "closures_max": 0
}
