src/metrics/snapshots/big_code_analysis__metrics__nom__tests__cpp_lambdas_inside_function.snap
---
source: src/metrics/nom.rs
expression: metric.nom
---
{
  "functions": 1,
  "closures": 2,
  "functions_average": 0.5,
  "closures_average": 1.0,
  "total": 3,
  "average": 1.5,
  "functions_min": 0,
  "functions_max": 1,
  "closures_min": 0,
  "closures_max": 2
}
