src/metrics/snapshots/big_code_analysis__metrics__nom__tests__kotlin_lambda_nom.snap
---
source: src/metrics/nom.rs
expression: metric.nom
---
{
  "functions": 1,
  "closures": 1,
  "functions_average": 0.5,
  "closures_average": 0.5,
  "total": 2,
  "average": 1.0,
  "functions_min": 0,
  "functions_max": 1,
  "closures_min": 0,
  "closures_max": 1
}
