src/metrics/snapshots/big_code_analysis__metrics__nom__tests__mozjs_iife_nom.snap
---
source: src/metrics/nom.rs
expression: metric.nom
---
{
  "functions": 0,
  "closures": 1,
  "functions_average": 0.0,
  "closures_average": 0.5,
  "total": 1,
  "average": 0.5,
  "functions_min": 0,
  "functions_max": 0,
  "closures_min": 0,
  "closures_max": 1
}
