src/metrics/snapshots/big_code_analysis__metrics__nom__tests__tcl_nested_nom.snap
---
source: src/metrics/nom.rs
assertion_line: 1177
expression: metric.nom
---
{
  "functions": 2.0,
  "closures": 0.0,
  "functions_average": 0.6666666666666666,
  "closures_average": 0.0,
  "total": 2.0,
  "average": 0.6666666666666666,
  "functions_min": 0.0,
  "functions_max": 1.0,
  "closures_min": 0.0,
  "closures_max": 0.0
}
